cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Account_Name_textfield__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_textfield__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>hidden field to allow searching for a connection by account name</inlineHelpText>
    <label>Account Name (text field for search)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>