cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Connections (Alternate Contact)</relationshipLabel>
    <relationshipName>Connections1</relationshipName>
    <type>Lookup</type>
</CustomField>