cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Call_Speed__c.field-meta.xml
<CustomField>
    <fullName>Call_Speed__c</fullName>
    <label>Call Speed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HD+ - &gt;1.5M</fullName>
            </value>
            <value>
                <fullName>HD - 1.5M</fullName>
            </value>
            <value>
                <fullName>SD - 750K</fullName>
            </value>
            <value>
                <fullName>CIF- 384K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>