cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>VidyoDesktop</fullName>
            </value>
            <value>
                <fullName>VidyoMobile</fullName>
            </value>
            <value>
                <fullName>Zoom Desktop App</fullName>
            </value>
            <value>
                <fullName>Zoom Cloud Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>