cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Std Based H.323/SIP</fullName>
                <default>true</default>
                <label>Std Based H.323/SIP</label>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>View Only</fullName>
            </value>
            <value>
                <fullName>Vidyo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>