cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/ConnectionName__c.field-meta.xml
<CustomField>
    <fullName>ConnectionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter room name or other connection identifier</inlineHelpText>
    <label>Connection (room) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>