cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>select contact from Account contacts</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>