cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Date_Certified__c.field-meta.xml
<CustomField>
    <fullName>Date_Certified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Certified</label>
    <type>Date</type>
</CustomField>