cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Dial_Mode__c.field-meta.xml
<CustomField>
    <fullName>Dial_Mode__c</fullName>
    <label>Dial Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OE Dials Out</fullName>
                <default>true</default>
                <label>OE Dials Out</label>
            </value>
            <value>
                <fullName>OE Provides MeetMe Dial In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>