cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Encryption__c.field-meta.xml
<CustomField>
    <fullName>Encryption__c</fullName>
    <label>Encryption</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>