cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Endpoint_Manafactur_s__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Manafactur_s__c</fullName>
    <label>Endpoint Manufacturer(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CIsco/Tandberg</fullName>
            </value>
            <value>
                <fullName>Cisco Telepresence</fullName>
            </value>
            <value>
                <fullName>LIfesize</fullName>
            </value>
            <value>
                <fullName>Lync</fullName>
            </value>
            <value>
                <fullName>Polycom</fullName>
            </value>
            <value>
                <fullName>Radvision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>