cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Engagement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>