cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Firewall__c.field-meta.xml
<CustomField>
    <fullName>Firewall__c</fullName>
    <label>Firewall</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>UDP Ports Open</fullName>
            </value>
            <value>
                <fullName>Using VidyoProxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>