cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Firewall_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Firewall_Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default Setup/IE Settings</fullName>
                <default>true</default>
                <label>Default Setup/IE Settings</label>
            </value>
            <value>
                <fullName>Specify WebProxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>