cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Hosted__c.field-meta.xml
<CustomField>
    <fullName>Hosted__c</fullName>
    <label>Hosted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OE Cloud</fullName>
                <default>true</default>
                <label>OE Cloud</label>
            </value>
            <value>
                <fullName>Customer On-prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>