cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Meet_Me_Type__c.field-meta.xml
<CustomField>
    <fullName>Meet_Me_Type__c</fullName>
    <label>Meet-Me Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dial_Mode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OE Bridge</fullName>
            </value>
            <value>
                <fullName>Customer Bridge</fullName>
            </value>
            <value>
                <fullName>Service Provider Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>