cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Public IP/Corporate LAN</fullName>
            </value>
            <value>
                <fullName>Public IP/Consumer LAN</fullName>
            </value>
            <value>
                <fullName>Neighbor Zone w/ Customer VCS</fullName>
            </value>
            <value>
                <fullName>VPN Connection</fullName>
            </value>
            <value>
                <fullName>Other (ISDN, etc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>