cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Presentation_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Sharing__c</fullName>
    <label>Presentation/Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>H.239</fullName>
                <default>true</default>
                <label>H.239</label>
            </value>
            <value>
                <fullName>BHCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>