cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Special_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Special_Considerations__c</fullName>
    <inlineHelpText>e.g.  SIP only, no h.264, no AAC-LD, etc</inlineHelpText>
    <label>Special Considerations</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>