cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/Time_zone__c.field-meta.xml
<CustomField>
    <fullName>Time_zone__c</fullName>
    <label>Time_zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone</valueSetName>
    </valueSet>
</CustomField>