cititechdNew2024Jan/force-app/main/default/objects/Connection__c/fields/URI_IP__c.field-meta.xml
<CustomField>
    <fullName>URI_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URI</label>
    <type>TextArea</type>
</CustomField>