cititechdNew2024Jan/force-app/main/default/objects/Connection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Certified__c</columns>
    <columns>Dial_Mode__c</columns>
    <columns>Connection_Type__c</columns>
    <columns>Network__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>