cititechdNew2024Jan/force-app/main/default/objects/Connection__c/listViews/Recent_Connections.listView-meta.xml
<ListView>
    <fullName>Recent_Connections</fullName>
    <columns>NAME</columns>
    <columns>ConnectionName__c</columns>
    <columns>URI_IP__c</columns>
    <columns>Dial_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Connections</label>
</ListView>